# cpp-starter-project

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
configured_files/: config.hpp.in
docs/: Compilers.md
src/: AppConfig.h.in  CMakeLists.txt  cli.cpp  hello.c  hello.cpp  main.cpp
